--- a/piezasbroncehtml/pieza_bronce10.html
+++ b/piezasbroncehtml/pieza_bronce10.html
@@ -19,20 +19,24 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/bronces/bronce10.jpeg" class="glightbox">
-          <img src="../mis_fotos/bronces/bronce10.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
+        <a href="../mis_fotos/bronces/bronce10.png" class="glightbox">
+          <img src="../mis_fotos/bronces/bronce10.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Ife</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce Guerrero Ife</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
          Las estatuas Ife provienen de la antigua ciudad de Ife, en lo que hoy es Nigeria, cuna de la civilización yoruba. Son famosas por su realismo y detalle, especialmente en las esculturas de cabezas y figuras humanas.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
          Las estatuas Ife de bronce representan principalmente a personas de alto rango en la sociedad yoruba, especialmente reyes (Oba), miembros de la realeza y nobles, más que dioses o figuras mitológicas. Su propósito no era solo decorativo, sino ritual y político, reforzando la autoridad y legitimidad del gobernante.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+Las esculturas de Ife desafiaron las concepciones occidentales del arte africano cuando fueron descubiertas en 1938. Su realismo y sofisticación técnica revelan una tradición escultórica milenaria. Este guerrero, por su postura, atributos y ornamento, encarna no solo fuerza física, sino autoridad espiritual y legitimidad política. En la cosmovisión yoruba, el guerrero no es solo combatiente: es guardián del equilibrio cósmico.
+
         </p>
 
 
