--- a/piezasbroncehtml/pieza_bronce13.html
+++ b/piezasbroncehtml/pieza_bronce13.html
@@ -27,18 +27,20 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce Kalabo sobre camaleon</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Pieza de bronce posiblemente origen Senufo.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce poid animaux</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         La escultura en bronce representa un “poids à peser” tradicional de África Occidental, atribuible a la cultura Mossi de Burkina Faso, y más específicamente al estilo de Kalabo, conocido por sus composiciones zoomorfas imaginativas.
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Significado simbólico:
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+         
+Pesas tradicionales para oro: Usadas en transacciones comerciales en el pasado, especialmente por los Akan y Mossi.
 
-El ave (kalabo) representa vigilancia, poder espiritual o protección
+Objeto de sabiduría y enseñanza: La combinación animal transmite valores como astucia, vigilancia y armonía.
 
-El camaleón representa adaptación, paciencia, observación
-
-Juntos, podrían simbolizar la armonía entre lo espiritual y lo terrenal, o poder y sabiduría combinados
+Elemento decorativo contemporáneo: Hoy se valoran como esculturas de colección por su carga simbólica y estética.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Estas esculturas en bronce no son simples ornamentos: son contenedores de significado cultural. El ave representa la visión espiritual, mientras que el reptil (camaleón o lagarto) simboliza adaptabilidad y conexión con la tierra. En conjunto, la pieza expresa una cosmología dual, donde lo visible y lo invisible coexisten.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 10 cm de alto</li>
