--- a/piezasbroncehtml/pieza_bronce14.html
+++ b/piezasbroncehtml/pieza_bronce14.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/bronces/bronce14.jpeg" class="glightbox">
-          <img src="../mis_fotos/bronces/bronce14.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
+        <a href="../mis_fotos/bronces/bronce14.png" class="glightbox">
+          <img src="../mis_fotos/bronces/bronce14.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
         </a>
       </div>
 
@@ -29,15 +29,30 @@
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce caballero Dogón</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;" >
-          Estas esculturas fueron realizadas por herreros de la casta especializada en metalurgia entre los Dogon (conocidos tradicionalmente como “irím” — los “hombres del fuego”). 
+         Escultura en bronce que representa a un jinete montado sobre un caballo estilizado, acompañado por una segunda figura.
+
+Las proporciones son alargadas y abstractas, con énfasis en la verticalidad y la simetría.
+
+El caballo presenta crines y arneses detallados, mientras que los jinetes exhiben rasgos faciales simplificados y torsos cilíndricos.
+
+La superficie muestra una pátina verdosa por oxidación, que acentúa su antigüedad y textura ritual.
 
 
-Las técnicas usadas son análogas a las empleadas en otras zonas de África para broncería: fundición mediante cera perdida (“lost‑wax casting”).
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
-          Escultura en bronce que representa dos figuras montadas en un caballo —  “cavaliers Dogon”. Estas piezas suelen ser estilizadas, con proporciones propias del arte tradicional.
-        </p>
+          El jinete representa una figura de poder, posiblemente un ancestro, líder o guerrero.
 
+La presencia del acompañante puede simbolizar la transmisión de conocimiento, la protección espiritual o la dualidad entre lo terrenal y lo ancestral.
+
+El caballo, animal introducido tardíamente en la región, se asocia con movilidad, prestigio y autoridad.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Estas esculturas no eran utilizadas en rituales directos, sino como objetos votivos o conmemorativos.
+
+En el contexto Dogon, el jinete puede representar el alma guiada hacia el mundo de los ancestros.
+
+También puede aludir a la jerarquía social o a la figura del hogon (sacerdote supremo).
+        </p>
 
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 10 cm de alto</li>
