--- a/piezasbroncehtml/pieza_bronce15.html
+++ b/piezasbroncehtml/pieza_bronce15.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce Darme</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Escultura ritual en bronce que representa una escena de transporte ceremonial: dos figuras humanas portan a un dignatario sentado en una litera suspendida. La figura central, de mayor jerarquía, se distingue por su tocado elaborado y postura erguida, mientras que los portadores están representados en movimiento, con expresión dinámica. La pieza está trabajada con gran detalle en los ropajes, tocados y proporciones, lo que sugiere una función simbólica más allá de lo narrativo.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          El pueblo Darme de Togo, aunque menos documentado que otros grupos de la región, mantiene una tradición de metalurgia ritual heredada de los pueblos Akan y Yoruba. Las esculturas en bronce como esta no solo representan escenas cotidianas, sino que encarnan valores sociales, como el respeto por la autoridad, la cooperación y la movilidad ritual. El uso de la cera perdida indica un alto nivel técnico y una intención de permanencia simbólica.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
+          <li><strong>Tamaño:</strong> 10 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Togo, región central</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
