--- a/piezasbroncehtml/pieza_bronce16.html
+++ b/piezasbroncehtml/pieza_bronce16.html
@@ -27,15 +27,23 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce Dogón</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Escultura ritual en bronce que representa una pareja ancestral sentada, con coronas estilizadas y gesto de cercanía. La figura masculina apoya el brazo sobre el hombro de la figura femenina, gesto que sugiere protección, unión espiritual y transmisión de linaje. Ambas figuras están conectadas por una base común, lo que refuerza la idea de simetría cósmica y equilibrio ritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Objeto de culto doméstico o comunitario: Representa ancestros protectores o figuras míticas como el Nommo.
+
+Símbolo de fertilidad y transmisión de conocimiento: La pareja encarna la continuidad del linaje y la enseñanza espiritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         En la cosmología Dogon, la pareja es el principio generador del universo. Esta escultura no representa individuos, sino arquetipos espirituales: el hombre como protector y transmisor, la mujer como fuente de vida y sabiduría. El gesto de contacto físico refuerza la idea de comunión espiritual, y la simetría formal sugiere una visión del mundo basada en el equilibrio entre fuerzas complementarias.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
