--- a/piezascascohtml/pieza_casco2.html
+++ b/piezascascohtml/pieza_casco2.html
@@ -29,21 +29,16 @@
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Casco Nieré</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-        Máscara casco de cobertura completa
-
-Cresta vertical: Alta, simétrica, con forma estilizada de plumas o hojas.
-
-Motivos geométricos: Triángulos, círculos y líneas talladas y pintadas.
-
-Coloración: Tonos terrosos que refuerzan el carácter ritual.
-
-Base perforada: Orificios para fijación al traje ceremonial.
+        Este casco Niaré presenta una estructura escultórica imponente, caracterizada por una gran cresta vertical calada, compuesta por elementos geométricos en forma de flechas y triángulos. La superficie del casco está decorada con patrones incisos y motivos angulares resaltados con pigmentos claros sobre un fondo oscuro. El rostro estilizado, con un ojo circular en relieve y formas abstractas, refuerza el carácter simbólico de la pieza. La base perforada indica su uso como casco dancístico ajustado a la cabeza del portador.
         </p>
          <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-         La cresta vertical simboliza la conexión entre el mundo terrenal y el espiritual. Los patrones geométricos representan orden cósmico, jerarquía social y escarificaciones rituales. El uso de pigmentos naturales refuerza la autenticidad y el vínculo con la tierra.
+Entre los Senufo, los cascos Niaré están asociados a sociedades iniciáticas y a rituales ligados a la fertilidad, la protección comunitaria y la comunicación con fuerzas espirituales. Su diseño geométrico, la cresta vertical y la estilización del rostro remiten a las figuras de poder utilizadas por grupos de iniciación como el Poro, encargado de la transmisión del conocimiento y la cohesión social.
 
-El casco Nieré es una manifestación de poder espiritual y estética simbólica. Su diseño sugiere una función activa en rituales de transformación, donde el individuo se convierte en símbolo colectivo. Esta pieza destaca por su equilibrio entre geometría, verticalidad y expresividad ritual, siendo un testimonio de la riqueza artística del África occidental.
-        </p>
+         </p>
+          <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+
+          Estas piezas se portaban durante ceremonias y danzas en las que el portador asumía el rol de un espíritu protector o de un antepasado. La altura y complejidad de la cresta favorecían una silueta impresionante en movimiento, destinada a imponer respeto y establecer un vínculo ritual entre lo humano y lo espiritual.
+         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 70 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
