--- a/piezascascohtml/pieza_casco7.html
+++ b/piezascascohtml/pieza_casco7.html
@@ -27,15 +27,25 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Casco Mendé</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         El casco corresponde a una máscara tipo casco Mende, también conocida como máscara Sowei o Bundu, originaria de Sierra Leona y Liberia. Es una de las pocas tradiciones africanas donde las máscaras son portadas exclusivamente por mujeres, en ceremonias de iniciación de la sociedad femenina Sande.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Ceremonias de iniciación femenina: Marca el paso de niña a mujer, con enseñanzas sobre fertilidad, moral y comunidad.
+
+Encarnación del espíritu Sowei: La máscara no representa, sino es el espíritu que guía la transformación.
+
+Símbolo de poder femenino: La sociedad Sande es una fuerza espiritual y política en la comunidad.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         La máscara casco Mende es una obra maestra de la escultura africana: combina estética refinada, función ritual y poder simbólico. En danza, la portadora se convierte en el espíritu Sowei, enseñando, protegiendo y bendiciendo. Su forma de casco refuerza la idea de transformación total, donde el cuerpo entero se convierte en vehículo espiritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera tallada</li>
+          <li><strong>Origen:</strong> Sierra Leona</li>
+         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
