--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <a href="piezasbroncehtml/pieza_bronce20.html"><img src="mis_fotos/bronces/bronce20.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasbroncehtml/pieza_bronce21.html"><img src="mis_fotos/bronces/bronce21.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasbroncehtml/pieza_bronce22.html"><img src="mis_fotos/bronces/bronce22.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
-      <a href="piezasbroncehtml/pieza_bronce23.html"><img src="mis_fotos/bronces/bronce23.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
+      <a href="piezasbroncehtml/pieza_bronce23.html"><img src="mis_fotos/bronces/bronce23.jpg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasbroncehtml/pieza_bronce24.html"><img src="mis_fotos/bronces/bronce24.jpeg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
       <a href="piezasbroncehtml/pieza_bronce25.html"><img src="mis_fotos/bronces/bronce25.jpg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>
-      <a href="piezasbroncehtml/pieza_bronce26.html"><img src="mis_fotos/bronces/bronce26.jpg" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>       
+      <a href="piezasbroncehtml/pieza_bronce26.html"><img src="mis_fotos/bronces/bronce26.JPG" class="rounded-xl shadow-md object-contain w-full h-28 bg-black" /></a>       
             
       
       <!-- Puedes seguir añadiendo más imágenes debajo, se irán colocando automáticamente en nuevas filas -->
