--- a/piezasestatuahtml/pieza_estatua4.html
+++ b/piezasestatuahtml/pieza_estatua4.html
@@ -27,15 +27,30 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Mumuye</h2>
+        
+
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          La escultura corresponde al estilo Mumuye, originario del noreste de Nigeria, en la región del río Benoué. Estas figuras son conocidas por su verticalidad extrema, abstracción formal y función ritual, y han influido profundamente en el arte moderno por su audaz lenguaje visual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Figura antropomorfa tallada en madera, de diseño abstracto y vertical, con cabeza redondeada, brazos alargados y torso estilizado. La escultura presenta líneas incisas en el cuello y una postura frontal, con las extremidades extendidas hacia abajo. La superficie muestra pátina oscura y desgaste ritual, lo que indica uso ceremonial prolongado.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
+          Figura de protección espiritual: Colocada en casas o santuarios para alejar el mal.
+
+Objeto de adivinación y curación: Usado por sacerdotes o curanderos en rituales específicos.
+
+Símbolo de autoridad moral: Representa ancestros tutelares o jueces rituales.
+
+Elemento de iniciación: Presente en ceremonias de paso y enseñanza espiritual.
+Las esculturas Mumuye, llamadas Iagalagana, no son retratos sino contenedores de fuerza espiritual. Su lenguaje visual —líneas puras, proporciones abstractas, ritmo vertical— ha fascinado a artistas modernos como Giacometti y Brancusi. En su contexto original, estas figuras son activadas por canto, danza y ofrenda, y su presencia garantiza protección, sabiduría y equilibrio.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Región de Taraba, Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
