--- a/piezasestatuahtml/pieza_estatua5.html
+++ b/piezasestatuahtml/pieza_estatua5.html
@@ -27,7 +27,7 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura mujer cuerno</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
          Figura femenina estilizada: Proporciones alargadas, cintura estrecha, vestido largo con motivos geométricos en tonos tierra.
 
