--- a/piezasestatuahtml/pieza_estatua6.html
+++ b/piezasestatuahtml/pieza_estatua6.html
@@ -29,19 +29,34 @@
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Senufo deble</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Un deble es una figura espiritual tallada en madera que sirve como mediador entre los humanos y los seres sobrenaturales. Los Senufo creen que estas esculturas albergan la presencia o fuerza de un espíritu protector.
-<br>
+         Escultura antropomorfa de gran verticalidad, tallada en madera oscura con pátina por manipulación ritual.
+
+Representa una figura femenina de pie, con torso alargado, pechos prominentes, brazos rectos y manos apoyadas sobre los muslos.
+
+La cabeza es cilíndrica o cónica, con peinado o tocado elevado, rostro sereno y ojos almendrados.
+
+El cuerpo presenta marcas de escarificación o líneas simbólicas talladas en relieve.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Utilizadas en ceremonias de iniciación, funerales, cultos agrarios y danzas de trance.
+
+Se colocan en altares o se presentan en procesiones como intermediarias entre el mundo humano y el espiritual.
+
+Su presencia garantiza la fertilidad de la tierra, la cohesión del grupo y la protección de los ancestros.
 
 
-Son iguras humanas estilizadas, generalmente femeninas, aunque también las hay masculinas.
+Tallado a mano con herramientas tradicionales, sin lijado industrial.
 
-Proporciones alargadas y una actitud hierática (postura rígida, solemne).
+Pátina obtenida por manipulación, libaciones y exposición al humo.
 
-Ojos semicalados, mandíbula marcada, pechos prominentes en figuras femeninas.
+Estilo Senufo caracterizado por proporciones alargadas, simetría axial y geometría corporal.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Los Senufo poseen una rica tradición escultórica ligada a sociedades iniciáticas como el Poro.
 
-Brazos pegados al cuerpo y manos apoyadas sobre el vientre o los muslos.
+Las deble son parte de un sistema cosmológico complejo donde el arte es vehículo de comunicación espiritual.
 
-Madera oscura con pátina producida por la manipulación ritual.
+La escultura no es decorativa, sino funcional y sagrada.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 100 cm de alto</li>
