--- a/piezasestatuahtml/pieza_estatua7.html
+++ b/piezasestatuahtml/pieza_estatua7.html
@@ -27,15 +27,29 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Baga</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Esta figura Baga tallada en madera presenta las características formales típicas de la tradición escultórica de este pueblo de la región costera de Guinea. Su silueta, estilizada y vertical, combina volúmenes sobrios con un modelado expresivo. El cuerpo aparece alargado y ligeramente curvado, con rasgos faciales marcados: ojos reducidos, nariz prominente y boca discretamente delineada.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Los Baga son conocidos por su extraordinaria producción escultórica, vinculada a rituales de iniciación, protección y fertilidad. Las figuras antropomorfas suelen representar espíritus tutelares o antepasados que acompañan a la comunidad en momentos de transición, siembras o celebraciones.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Dependiendo de la variante, las figuras Baga podían:
+
+custodiar santuarios domésticos;
+
+servir como intermediarias en consultas oraculares;
+
+desempeñar un rol protector para la familia o la comunidad;
+
+participar en celebraciones agrícolas o de iniciación.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Mader tallada</li>
+          <li><strong>Origen:</strong> Pueblo Baga, Región de Guinea Costera, Guinea</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
