--- a/piezasestatuahtml/pieza_estatua8.html
+++ b/piezasestatuahtml/pieza_estatua8.html
@@ -29,19 +29,37 @@
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Baga</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-       Los Baga son un pueblo de África Occidental que vive a lo largo de la costa Atlántica en la parte sur de Guinea (Guinea-Conakry) y en la costa norte de Guinea-Bissau.
+      Escultura de gran formato, tallada en madera, con forma antropomorfa estilizada.
+
+Presenta una estructura vertical con brazos elevados en forma de arco o alas, rostro esquemático con ojos circulares y boca abierta.
+
+La base circular está decorada con motivos geométricos tallados.
+
+La superficie muestra pátina por uso ritual, con zonas de desgaste y pigmentación.Esta figura pertenece al tipo “Banda” o “Bansonyi”, asociada a espíritus protectores femeninos.
+
+Los brazos elevados simbolizan fuerza espiritual, protección y conexión con lo divino.
+
+El rostro esquemático representa la presencia de lo invisible, más que una identidad humana concreta.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Tradicionalmente eran animistas; aunque muchos adoptaron el islam, la herencia artística y las tradiciones antiguas perduran en sus esculturas y máscaras
+         Utilizada en ceremonias de iniciación, fertilidad, cosecha y protección comunitaria.
+
+Portada por bailarines en mascaradas, acompañada de música y cantos tradicionales.
+
+Actúa como mediadora entre el mundo espiritual y el mundo humano, invocando bendiciones y orden social.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Esculturas ligadas a lo simbólico: algunas representan espíritus protectores, antepasados o fuerzas divinas.
+         Los Baga poseen una rica tradición escultórica ligada a sociedades secretas y rituales agrarios.
+
+Las figuras Banda son consideradas entidades vivas, con nombre, carácter y poder espiritual.
+
+Su uso está regulado por normas estrictas de transmisión oral y control ritual.
         </p>
 
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 20 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
-          <li><strong>Origen:</strong> Región Yoruba</li>
+          <li><strong>Origen:</strong> Baga, región costera de Guinea</li>
          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
