--- a/piezasestatuahtml/pieza_estatua10.html
+++ b/piezasestatuahtml/pieza_estatua10.html
@@ -29,16 +29,32 @@
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Muñeca Ere Ibeji (Youruba)</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-         Representa a un gemelo.
+        Figura antropomorfa tallada en madera, de pequeño formato, con proporciones estilizadas y simétricas.
 
-Se usa cuando uno o ambos gemelos mueren.
+Rasgos faciales definidos: ojos almendrados, nariz triangular, boca cerrada, peinado elevado o tocado cónico.
 
-Los Yoruba tienen una de las tasas de gemelos más altas del mundo y creen que el espíritu del gemelo debe ser cuidado.
+El cuerpo suele presentar escarificaciones rituales talladas en relieve.
 
-La madre o familia visten, bañan y alimentan simbólicamente la figura.
+Puede estar adornada con cuentas, textiles o pigmentos según el culto familiar.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-         Los artistas tradicionales Yoruba son muy precisos: sus figuras tienen simetría, proporción y equilibrio, lo que las hace muy reconocibles.
+         Representa a un gemelo fallecido, parte de un par de ibeji (gemelos), considerados portadores de fortuna y poder espiritual en la cosmovisión yoruba.
+
+La figura no es retrato, sino receptáculo espiritual: el alma del gemelo vive en ella.
+
+Su simetría y verticalidad reflejan equilibrio cósmico y armonía familiar.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Cuidada por la madre o familiares del gemelo fallecido, alimentada, vestida y venerada como si estuviera viva.
+
+Se le ofrecen comidas, baños rituales, cantos y danzas.
+
+Actúa como mediadora entre el mundo espiritual y el bienestar familiar, garantizando protección y prosperidad.
+Los Yoruba tienen una de las tasas de gemelidad más altas del mundo; los ibeji son celebrados como bendición.
+
+El culto a los ibeji es una práctica viva, con variantes modernas que incluyen figuras de plástico o cerámica.
+
+Las Ere Ibeji son piezas profundamente personales, con valor espiritual, emocional y artístico.
         </p>
 
 
