--- a/piezasestatuahtml/pieza_estatua11.html
+++ b/piezasestatuahtml/pieza_estatua11.html
@@ -27,17 +27,32 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura sentada</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-         Cultura Chokwe (Angola, Congo, Zambia), con posibles reinterpretaciones contemporáneas inspiradas en el arte tribal africano.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Tchiokoroba</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify"> 
+       Figura masculina sentada o en cuclillas, con rostro alargado, ojos cerrados y expresión solemne.
+
+Peinado elevado o tocado cónico, oreja perforada con aro metálico.
+
+Brazos doblados, manos sobre el vientre, torso estilizado con escarificaciones talladas.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-         La escultura representa a un ser humano en posición sentada o agazapada, con los brazos apoyados sobre las rodillas. El rostro muestra rasgos estilizados: nariz prominente, ojos cerrados y boca discreta, transmitiendo serenidad y recogimiento. El cabello o tocado está trabajado con textura detallada. Un aro dorado en la oreja izquierda aporta contraste y simbolismo. La superficie pulida de la madera confiere un acabado refinado y solemne.
+      Representa un ancestro masculino venerado, símbolo de sabiduría, autoridad y conexión espiritual.
+
+El gesto de introspección (manos sobre el vientre) sugiere meditación, poder interior o canalización espiritual.
+
+El aro en la oreja puede indicar estatus ritual o pertenencia a una sociedad iniciática.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+      En la cosmovisión Mandé, los ancianos (thiokoroba) son depositarios de conocimiento, guardianes de la memoria y figuras de respeto absoluto.
+
+Las esculturas no son decorativas, sino entidades vivas que requieren cuidado y ritual.
+
+El arte maliense combina función espiritual, estética simbólica y transmisión cultural.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 60 cm </li>
           <li><strong>Material:</strong> Madera</li>
-          <li><strong>Origen:</strong> Centro Africa</li>
+          <li><strong>Origen:</strong> Cultura: Bambara / Mandé, Mali</li>
           <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
