--- a/piezasestatuahtml/pieza_estatua14.html
+++ b/piezasestatuahtml/pieza_estatua14.html
@@ -30,14 +30,34 @@
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Yoruba de guerrero</h2>
        
          <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Las estatuas Yoruba de guerreros (Nigeria) forman parte del arte tradicional del pueblo Yoruba, uno de los más influyentes de África Occidental. Suelen provenir de regiones como Oyo, Ijebu, Ife, Ekiti, Abeokuta y otras áreas donde existían linajes guerreros o cultos dedicados a la protección y el poder.
+         Figura masculina de pie sobre una cabeza simbólica, con torso erguido y brazos flexionados sosteniendo objetos rituales.
+
+Rostro expresivo con ojos grandes, marcas faciales (posiblemente escarificaciones) y tocado cónico elevado.
+
+El cuerpo presenta anillos en el cuello, vestimenta tallada y postura frontal de autoridad.
+
+La base representa una cabeza con ojos cerrados y marcas azules en las mejillas, posiblemente lágrimas o pintura ritual.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-        Las estatuas de guerreros Yoruba suelen simbolizar:
+        El guerrero representa fuerza, protección y liderazgo espiritual dentro de la cosmovisión yoruba.
 
-Poder militar y autoridad
+La figura sobre la cabeza simboliza dominio sobre el mundo espiritual o ancestral, indicando jerarquía o poder ritual.
 
-El guerrero representa a un luchador histórico, un jefe militar o un guardián espiritual.
+Los objetos en las manos pueden ser emblemas de poder, como bastones, armas o símbolos de sabiduría.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200">
+        Posible uso en altares familiares o templos dedicados a Orisha Ogun (dios del hierro y la guerra) o Oranmiyan, héroe mítico yoruba.
+
+Invocación de protección, justicia o fuerza en contextos de conflicto o iniciación.
+
+También puede representar un ancestro guerrero venerado por linajes específicos.
+
+En la tradición yoruba, los guerreros no solo son figuras militares, sino también espirituales, mediadores entre el mundo visible y el invisible.
+
+Las esculturas sirven como receptáculos de energía ancestral, y su presencia garantiza protección y continuidad del linaje.
+
+El arte yoruba combina estética, espiritualidad y función social en cada pieza.
+
         </p>
 
 
