--- a/piezasestatuahtml/pieza_estatua13.html
+++ b/piezasestatuahtml/pieza_estatua13.html
@@ -56,7 +56,7 @@ Zapatos o pies exagerados: en algunas tradiciones yoruba, se enfatiza la base o 
           <li><strong>Tamaño:</strong> 20 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
           <li><strong>Origen:</strong> Región Yoruba</li>
-         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>--!
+         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -65,9 +65,8 @@ Zapatos o pies exagerados: en algunas tradiciones yoruba, se enfatiza la base o 
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/estatuas/estatua13_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua13_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 13_1" /></a>
-      <a href="mis_fotos/estatuas/estatua13_2.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua13_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      <a href="../mis_fotos/estatuas/estatua13_1.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua13_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 13" /></a>
+      <a href="../mis_fotos/bronces/bronce13_2.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce13_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
     <!-- Botón de volver -->
